--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
@@ -23,7 +30,93 @@
         </ul>
       </address>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h1>Our works</h1>
+        <ul>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/bankingapp.jpg" alt="Banking app" width="360" />
+            <h2>Banking App Interface Concept</h2>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashlesspayment.jpg"
+              alt="Mobile telephone"
+              width="360"
+            />
+            <h2>Cashless Payment</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditaioonapp.jpg"
+              alt="Computer and mobile"
+              width="360"
+            />
+            <h2>Meditaion App</h2>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxiservice.jpg"
+              alt="Venicle interior"
+              width="360"
+            />
+            <h2>Taxi Service</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screenillustr.jpg"
+              alt="Screenshots"
+              width="360"
+            />
+            <h2>Screen Illustrations</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/onlinecourses.jpg"
+              alt="Girl with mobile"
+              width="360"
+            />
+            <h2>Online Courses</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/instagramstories.jpg"
+              alt="Image from instagram"
+              width="360"
+            />
+            <h2>Instagram Stories Concept</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/organicfood.jpg"
+              alt="Bag with food"
+              width="360"
+            />
+            <h2>Organic Food</h2>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img src="./images/freshcofee.jpg" alt="Cup of coffe" width="360" />
+            <h2>Fresh Coffee</h2>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
