--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <nav class="header_navigation">
         <a href="./index.html" class="header-logo">WebStudio</a>
         <ul class="header-list">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="header-item"><a href="./index.html">Studio</a></li>
+          <li class="header-item"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
