--- a/portfolio.html
+++ b/portfolio.html
@@ -14,19 +14,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header_navigation">
+        <a class="header-logo link" href="./index.html">WebStudio</a>
+        <ul class="header-list list">
+          <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+          <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="adress">
+        <ul class="adress-list list">
+          <li class="adress-item"><a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="adress-item"><a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -117,9 +117,9 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html">WebStudio</a>
+      <p class="footer-text"> 
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
