--- a/index.html
+++ b/index.html
@@ -16,17 +16,33 @@
   <body>
     <header class="header">
       <nav class="header_navigation">
-        <a class="header-logo link" href="./index.html">WebStudio</a>
+        <a class="header-logo link" href="./index.html"
+          ><span class="header-web">Web</span>Studio</a
+        >
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
-          <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
+          <li class="header-item">
+            <a class="header-link current link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="adress">
         <ul class="adress-list list">
-          <li class="adress-item"><a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="adress-item"><a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="adress-item">
+            <a class="adress-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="adress-item">
+            <a class="adress-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -36,32 +52,32 @@
         <button class="hero-button" type="button">Order Service</button>
       </section>
       <section class="features">
-        <h2>Solutions</h2>
+        <h2 class="visually-hidden">Features</h2>
         <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-subtitle">Strategy</h3>
-            <p class="features-text">
+            <p class="features-text text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="features-item">
             <h3 class="features-subtitle">Punctuality</h3>
-            <p class="features-text">
+            <p class="features-text text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="features-item">
             <h3 class="features-subtitle">Diligence</h3>
-            <p class="features-text">
+            <p class="features-text text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="features-item">
             <h3 class="features-subtitle">Technologies</h3>
-            <p class="features-text">
+            <p class="features-text text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -96,7 +112,7 @@
               width="264"
             />
             <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
+            <p class="team-text text">Product Designer</p>
           </li>
           <li class="team-item">
             <img
@@ -105,7 +121,7 @@
               width="264"
             />
             <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
+            <p class="team-text text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
@@ -114,7 +130,7 @@
               width="264"
             />
             <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
+            <p class="team-text text">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -123,14 +139,16 @@
               width="264"
             />
             <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
+            <p class="team-text text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html">WebStudio</a>
-      <p class="footer-text">
+      <a class="footer-logo link" href="./index.html"
+        ><span class="footer-web">Web</span>Studio</a
+      >
+      <p class="footer-text text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
