--- a/portfolio.html
+++ b/portfolio.html
@@ -16,110 +16,140 @@
   <body>
     <header class="header">
       <nav class="header_navigation">
-        <a class="header-logo link" href="./index.html">WebStudio</a>
+        <a class="header-logo link" href="./index.html"
+          ><span class="header-web">Web</span>Studio</a
+        >
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
-          <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
+          <li class="header-item">
+            <a class="header-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link current link" href="./portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="adress">
         <ul class="adress-list list">
-          <li class="adress-item"><a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="adress-item"><a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="adress-item">
+            <a class="adress-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="adress-item">
+            <a class="adress-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Our works</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-        <ul>
-          <li>
-            <img src="./images/bankingapp.jpg" alt="Banking app" width="360" />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+      <section class="portfolio">
+        <h1 class="works visually-hidden">Our works</h1>
+        <ul class="works-list list">
+          <li class="works-item">
+            <button class="works-button" type="button">All</button>
           </li>
-          <li>
+          <li class="works-item">
+            <button class="works-button" type="button">Web Site</button>
+          </li>
+          <li class="works-item">
+            <button class="works-button" type="button">App</button>
+          </li>
+          <li class="works-item">
+            <button class="works-button" type="button">Design</button>
+          </li>
+          <li class="works-item">
+            <button class="works-button" type="button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="offers-list list">
+          <li class="offers-item">
+            <img src="./images/bankingapp.jpg" alt="Banking app" width="360" />
+            <h2 class="offers-title">Banking App Interface Concept</h2>
+            <p class="offers-text">App</p>
+          </li>
+          <li class="offers-item">
             <img
               src="./images/cashlesspayment.jpg"
               alt="Mobile telephone"
               width="360"
             />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <h2 class="offers-title">Cashless Payment</h2>
+            <p class="offers-text">Marketing</p>
           </li>
-          <li>
+          <li class="offers-item">
             <img
               src="./images/meditaioonapp.jpg"
               alt="Computer and mobile"
               width="360"
             />
-            <h2>Meditaion App</h2>
-            <p>App</p>
+            <h2 class="offers-title">Meditaion App</h2>
+            <p class="offers-text">App</p>
           </li>
-          <li>
+          <li class="offers-item">
             <img
               src="./images/taxiservice.jpg"
               alt="Venicle interior"
               width="360"
             />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <h2 class="offers-title">Taxi Service</h2>
+            <p class="offers-text">Marketing</p>
           </li>
-          <li>
+          <li class="offers-item">
             <img
               src="./images/screenillustr.jpg"
               alt="Screenshots"
               width="360"
             />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+            <h2 class="offers-title">Screen Illustrations</h2>
+            <p class="offers-text">Design</p>
           </li>
-          <li>
+          <li class="offers-item">
             <img
               src="./images/onlinecourses.jpg"
               alt="Girl with mobile"
               width="360"
             />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <h2 class="offers-title">Online Courses</h2>
+            <p class="offers-text">Marketing</p>
           </li>
-          <li>
+          <li class="offers-item">
             <img
               src="./images/instagramstories.jpg"
               alt="Image from instagram"
               width="360"
             />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <h2 class="offers-title">Instagram Stories Concept</h2>
+            <p class="offers-text">Design</p>
           </li>
-          <li>
+          <li class="offers-item">
             <img
               src="./images/organicfood.jpg"
               alt="Bag with food"
               width="360"
             />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="offers-title">Organic Food</h2>
+            <p class="offers-text">Web Site</p>
           </li>
-          <li>
+          <li class="offers-item">
             <img src="./images/freshcofee.jpg" alt="Cup of coffe" width="360" />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <h2 class="offers-title">Fresh Coffee</h2>
+            <p class="offers-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html">WebStudio</a>
-      <p class="footer-text"> 
+      <a class="footer-logo link" href="./index.html"
+        ><span class="footer-web">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
