--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
       <a class="footer-logo link" href="./index.html"
         ><span class="footer-web">Web</span>Studio</a
       >
-      <p class="footer-text">
+      <p class="footer-text text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
